Remove support for using KIO as download backend

In CI jobs and user feedback, it was found that errors frequently occur
when using KIO. Since there is also the Qt backend, which does not have
these errors, KIO can be replaced by it.

BUG:485896
FIXED-IN:8.2