src/alkdownloadengine.h
@@ -27,10 +27,9 @@ class ALK_EXPORT AlkDownloadEngine : public QObject
 public:
     enum Type {
         QtEngine,
-        KIOEngine,
         WebKitEngine,
         WebEngine,
-        DefaultEngine, ///< Use KIO or Qt network support
+        DefaultEngine, ///< Use t network support
         JavaScriptEngine, ///< Use an HTML engine with Javascript support
         JavaScriptEngineCSS, ///< Use an HTML engine with Javascript support, @see AlkDownloadEngine::finishedPage for details
     };
